--- a/package.json
+++ b/package.json
@@ -8,20 +8,29 @@
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "ramda": "^0.26.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-loader-spinner": "^3.1.2",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
+    "react-scripts": "3.0.1",
     "react-toastify": "^5.3.2",
     "styled-components": "^4.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "testMatch": [
+      "**/__tests__/**/*.test.js"
+    ],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-dom/extend-expect",
+      "jest-localstorage-mock"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,7 +48,11 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.1.0",
+    "@testing-library/jest-dom": "^4.1.0",
+    "@testing-library/react": "^9.1.3",
+    "@types/jest": "^24.0.18",
+    "axios-mock-adapter": "^1.17.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
@@ -49,6 +62,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "prettier": "^1.18.2"
+    "jest-localstorage-mock": "^2.4.0",
+    "prettier": "^1.18.2",
+    "react-app-rewired": "^2.1.3"
   }
 }
